# polars-japanese

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
docs/: api.md  index.md
polars_japanese_plugin/: Cargo.toml
polars_japanese_plugin/src/: lib.rs
python/polars_japanese/: __init__.py  common.py  datetime_util.py  kanjize_util.py  prefecture.py
python/polars_japanese/plugin/: __init__.py
src/: expressions.rs  lib.rs
src/polars_japanese/: __init__.py  common.py  jaconv_util.py  japanera_util.py  jpholiday_util.py  kanjize_util.py  normalize_util.py
src/polars_japanese/plugin/: __init__.py
tests/: test_common.py  test_datetime_util.py  test_jaconv_util.py  test_japanera_util.py  test_jpholiday_util.py  test_kanjize_util.py  test_normalize_util.py  test_prefecture.py
