[package]
name = "polars_japanese"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_japanese"
crate-type = ["cdylib"]

[dependencies]
polars       = { version = "*" }
pyo3         = { version = "*", features = ["extension-module","abi3-py38", "generate-import-lib"] }
pyo3-polars  = { version = "*", features = ["derive"] }
mojimoji-rs = "0.1.1"
polars-arrow = "0.46.0"
serde        = { version = "*", features = ["derive"] }
